添加路由守卫，处理页面逻辑

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>yishu</title>
+    <title>易书小铺</title>
   </head>
   <body>
     <div id="app">
